# streamq-app

./: .eslintrc.json  .gitignore  LICENSE  LICENSE.txt  README.md  binding.gyp  config.dev.yml  config.prod.yml  forge.config.ts  package-lock.json  package.json  tsconfig.json  webpack.dev.js  webpack.main.config.ts  webpack.plugins.ts  webpack.prod.js  webpack.renderer.config.ts  webpack.rules.ts
modules/byedpi/: proxy.pac
modules/proxy/: proxy.pac
napi/streamq-sysapi/: .gitignore  Cargo.toml  package.json
napi/streamq-sysapi/npm/darwin-x64/: README.md  package.json
napi/streamq-sysapi/npm/linux-x64-gnu/: README.md  package.json
napi/streamq-sysapi/npm/win32-x64-msvc/: README.md  package.json
napi/streamq-sysapi/src/: acrylic_window.rs  config.rs  event_emitter.rs  keybinds.rs  lib.rs  media_session.rs
src/: electron.js  index.ejs  index.tsx  ioevents-windows.cc  typings.d.ts
src/app_bootstrap/: i18n.ts  index.html  index.ts  preload.ts  typings.d.ts
src/app_bootstrap/AppBootstrap/: AppBootstrap.sass  AppBootstrap.tsx
src/app_bootstrap/icons/: Logo.tsx
src/app_bootstrap/locales/: en.yml  ru.yml
src/hooks/: stateRef.ts
src/main/: constants.ts  index.ts  settings.ts  typings.d.ts
src/main/app/: bootstrap.ts  main.ts
src/main/modules/youtubeProxy/: ByeDPI.ts  Xray.ts  YoutubeProxy.ts  YoutubeProxyConnection.ts
src/main/modules/youtubeUtils/: YoutubeUtils.ts
src/main/utils/: AcrylicBrowserWindow.ts  byeDPI.ts
src/styles/: index.sass
