[package]
edition = "2021"
name = "streamq-sysapi"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
crossbeam-channel = "0.5.8"
event-emitter-rs = "0.1.4"
futures = "0.3.28"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "async"] }
napi-derive = "2.12.2"
tokio = "1.32.0"
serde = "1.0.201"
utf16string = "0.2.0"
winapi = { version = "0.3.9", features = ["winuser"] }
windows-version = "0.1"
[dependencies.windows]
version = "0.51.1"
features = ["Data_Xml_Dom", "Foundation", "Foundation_Collections", "Media_Control"]
[dependencies.windows-sys]
version = "0.52.0"
features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_System_SystemInformation", "Win32_Graphics_Gdi", "Win32_Graphics_Dwm", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading"]

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
